# Auth_sprint_1

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  README_TASK.md  docker-compose.yml  pyproject.toml
.github/workflows/: continuous_integration.yml
auth_service/: Dockerfile  main.py  requirements.txt  routers.py
auth_service/schema/: auth.ddl  openapi.yaml  swagger.json
auth_service/src/core/: admin.py  config.py  controllers.py  jaeger.py  jwt.py  models.py  security.py  views.py
auth_service/src/db/: datastore.py  postgres.py  redis.py
auth_service/src/utils/: template_utils.py
auth_service/templates/: base.html  index.html
auth_service/templates/admin/: base.html
auth_service/templates/security/: change_login.html  change_password.html  history.html  index.html  login_user.html  profile.html  register_user.html
nginx/configs/: site.conf
tests/: .docker.env  .env  Dockerfile  conftest.py  docker-compose.yml  requirements.txt
tests/functional/: settings.py
tests/functional/src/: test_auth_service.py  test_jwt.py
