[tool.poetry]
name = "Auth Service"
version = "0.1.0"
authors = ["Barahlush <baraltiva@gmail.com>", "Polinavas95 <tatsuchan@mail.ru>"]
description = "Authentification service for the online movie database."
packages = [
    { include = "auth_service"}
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.1"
flask = "^2.2.2"
gevent = ">=22.10.2,<22.11.0"
wheel = "0.38.1"
gunicorn = ">=20.1.0,<20.2.0"
pytest = "^7.2.1"
peewee = "^3.15.4"
types-peewee = "^3.15.0.5"
sqlalchemy = "^2.0.3"
psycopg2-binary = "^2.9.5"
loguru = "^0.6.0"
types-psycopg2 = "^2.9.21.4"
flask-jwt-extended = "^4.4.4"
redis = "^4.5.1"
flask-admin = "^1.6.0"
flask-wtf = "^1.1.1"
types-redis = "^4.5.1.1"
wtf-peewee = "^3.0.4"
pydantic = "^1.10.5"
requests = "^2.28.1"
schemathesis = "^3.18.5"
flask-peewee = "^3.0.4"
peewee-migrate = "^1.6.6"

[tool.poetry.group.dev.dependencies]
blue = "*"
mypy = "*"
pip-audit = "*"
pytest = "*"
pytest-cov = "*"
ruff = "*"
pre-commit = "*"
djlint = "^1.19.14"

[tool.blue]
line-length = 79

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = false
disallow_untyped_defs = true
strict = true
implicit_reexport = true
exclude = [
    "auth_service/src/db/datastore.py",
    "auth_service/src/core/config.py",
    "auth_service/src/db/postgres.py",
    "auth_service/main.py",
    "venv",
    "postgres_data",
    "redis_data",
    "tests"
]


[tool.ruff]
line-length = 79
select = [
    "A",
    "ARG",
    "B",
    "C",
    "C4",
    "E",
    "ERA",
    "F",
    "I",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RET",
    "S",
    "T10",
    "T10",
    "UP",
    "W",
]
ignore = ["A003"]
exclude = ["auth_service/main.py",]
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["ARG", "S", "RET504", "PLR2004"]
"auth_service/src/utils/template_utils.py" = ["E501"]

[tool.djlint]
profile = "jinja"
ignore = "H005"